--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,18 @@
     <!-- Image view descriptions -->
     <string name="profile_image_description">This is the profile image</string>
     <string name="close_menu_description">This closes the sliding menu</string>
+    <string name="search_button_description">This is the search button</string>
     <string name="edit_order_description">This redirects to option to edit order(s)</string>
+    <string name="landing_card_image_description">Image on landing page card view</string>
+    <string name="today_s_offer_image_description">Image of today\'s offers</string>
+    
+    <!-- Hints for edit text(s) -->
+    <string name="hint_search">What would you like to eat?</string>
 
     <!-- Placeholders -->
     <string name="name_placeholder">Your Name</string>
     <string name="location_placeholder">Your Location</string>
+    <string name="landing_page_card_text_placeholder">Food</string>
+    <string name="today_s_offers">Today\'s Offers</string>
+    <string name="favorites">Favorites</string>
 </resources>
