--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="location_placeholder">Your Location</string>
     <string name="landing_page_card_text_placeholder">Food</string>
     <string name="today_s_offers">Today\'s Offers</string>
-    <string name="favorites">Favourites</string>
+    <string name="action_select_favourites">Favourites</string>
+    <string name="action_select_categories">Categories</string>
     <string name="err_msg_search">Please enter search query</string>
 </resources>
