--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="city_description">Image of Nairobi city</string>
     <string name="add_btn_description">This button increases the amount</string>
     <string name="minus_btn_description">This button decreases the amount</string>
+    <string name="redirect_home_description">This button redirects to home page</string>
+    <string name="edit_profile_description">This button edit the profile</string>
+    <string name="edit_profile_image_description">This button edit the profile image</string>
 
     <!-- Hints for edit text(s) -->
     <string name="hint_search">What would you like to eat?</string>
@@ -55,6 +58,9 @@
     <!-- Placeholders -->
     <string name="name_placeholder">Your Name</string>
     <string name="location_placeholder">Your Location</string>
+    <string name="details_placeholder">About You</string>
+    <string name="phone_placeholder">Your Phone Number</string>
+    <string name="email_placeholder">Your Email</string>
     <string name="landing_page_card_text_placeholder">Food</string>
     <string name="today_s_offers">Today\'s Offers</string>
     <string name="action_select_favourites">Favourites</string>
@@ -75,4 +81,5 @@
     <string name="proceed_to_checkout">Proceed to checkout</string>
     <string name="kenyan_currency">Ksh</string>
     <string name="nothing_placeholder">Nothing to show</string>
+    <string name="order_history">View order history</string>
 </resources>
