--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!-- Image view descriptions -->
+    <string name="logo_description">This is the app logo</string>
     <string name="profile_image_description">This is the profile image</string>
     <string name="close_menu_description">This closes the sliding menu</string>
     <string name="search_button_description">This is the search button</string>
@@ -54,6 +55,7 @@
     <!-- Hints for edit text(s) -->
     <string name="hint_search">What would you like to eat?</string>
     <string name="hint_edit_meal_amount">Here, you can edit the number of selected meal to be ordered</string>
+    <string name="hint_advert">Powered by Venturi Systems</string>
 
     <!-- Placeholders -->
     <string name="name_placeholder">Your Name</string>
@@ -82,4 +84,12 @@
     <string name="kenyan_currency">Ksh</string>
     <string name="nothing_placeholder">Nothing to show</string>
     <string name="order_history">View order history</string>
+
+    <!-- set up internet chooser dialog -->
+    <string name="internet_access_request">This app needs internet access</string>
+    <string name="internet_dialog_title">Select internet connection</string>
+    <string name="wifi_option">Wi-Fi</string>
+    <string name="mobile_network_option">Mobile Networks</string>
+    <string name="internet_message">Please select an internet connection</string>
+    <string name="close_button">Close</string>
 </resources>
