--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="activity_title_browser">Browse | Rubi</string>
     <string name="activity_title_order">Meals</string>
     <string name="activity_title_image_chooser">Select Picture</string>
+    <string name="activity_title_search">Search</string>
 
     <!-- Titles for toolbar menu -->
     <string name="action_clear_all">Clear All</string>
@@ -71,6 +72,7 @@
     <string name="mic_description">This is the speech to text button for searching</string>
     <string name="edit_order_description">This redirects to option to edit order(s)</string>
     <string name="landing_card_image_description">Image on landing page card view</string>
+    <string name="search_card_image_description">Image on search page card view</string>
     <string name="today_s_offer_image_description">Image of today\'s offers</string>
     <string name="overflow_description">Contains overflow menu for landing page</string>
     <string name="city_description">Image of Nairobi city</string>
@@ -128,18 +130,30 @@
     <string name="item">item</string>
     <string name="proceed_to_checkout">Proceed to checkout</string>
     <string name="proceed_to_cart">Proceed to cart</string>
+    <string name="cart">Cart</string>
     <string name="kenyan_currency">Ksh</string>
     <string name="nothing_placeholder">Nothing to show</string>
     <string name="order_history">View order history</string>
     <string name="category_placeholder">Name of category</string>
     <string name="add_to_cart">Add to Cart</string>
+    <string name="buy">Buy</string>
     <string name="food_name">Food Name</string>
     <string name="food_price">Food Price</string>
     <string name="food_details">Food Details</string>
     <string name="forgot_password">Forgot password?</string>
+    <string name="change_password">Change password</string>
+    <string name="link_to_login">Already registered? Login Now!</string>
+    <string name="minimum_password">Password too short, enter minimum 8 characters!</string>
+    <string name="auth_failed">Authentication failed, check your email and password</string>
     <string name="create_account">Create account</string>
     <string name="verification_message">We will send a verification code to
         this number via SMS.</string>
+    <string name="btn_back"><![CDATA[<< Back]]></string>
+    <string name="reset_password">Reset Password</string>
+    <string name="forgot_password_msg">Please enter your registered email address to receive your
+        password reset instructions.</string>
+    <string name="reset_successful">We have sent you instructions to reset your password!</string>
+    <string name="reset_fail">Failed to send reset email!</string>
 
     <!-- set up internet chooser dialog -->
     <string name="internet_access_request">This app needs internet access</string>
